workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/PagamentoGarantia__c.object-meta.xml
<CustomObject>
    <description>Registrar os pagamentos das garantias dentro da frente de Sinistro Vida.
Objeto Detalhe de Caso</description>
    <label>Garantia do Sinistro</label>
    <nameField>
        <label>Nome da Garantia do Sinistro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garantias do Sinistro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>