workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Pagamentos_de_garantia</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>