workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/ComplementoIndenizacao__c.field-meta.xml
<CustomField>
    <fullName>ComplementoIndenizacao__c</fullName>
    <label>Complemento de Indenização R$</label>
    <summarizedField>ComplementoIndenizacao__c.ValorFormula__c</summarizedField>
    <summaryForeignKey>ComplementoIndenizacao__c.PagamentoGarantia__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>