workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Data_da_cotacao_da_moeda_estrangeira__c.field-meta.xml
<CustomField>
    <fullName>Data_da_cotacao_da_moeda_estrangeira__c</fullName>
    <label>Data da cotação da moeda estrangeira</label>
    <type>Date</type>
</CustomField>