workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/DataApolice__c.field-meta.xml
<CustomField>
    <fullName>DataApolice__c</fullName>
    <formula>Caso__r.Contrato__r.DataEmissao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da apólice</label>
    <type>Date</type>
</CustomField>