workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>