workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/FranquiaContrato__c.field-meta.xml
<CustomField>
    <fullName>FranquiaContrato__c</fullName>
    <label>Franquia do Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>