workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Franquias__c.field-meta.xml
<CustomField>
    <fullName>Franquias__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Franquia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>