workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Garantia_do_segurado_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Garantia_do_segurado_do_contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do segurado do contrato</label>
    <referenceTo>GarantiaSeguradoContrato__c</referenceTo>
    <relationshipName>Pagamentos_de_garantia</relationshipName>
    <type>Lookup</type>
</CustomField>