workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/IsPagAdc__c.field-meta.xml
<CustomField>
    <fullName>IsPagAdc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagamento Adicional</label>
    <type>Checkbox</type>
</CustomField>