workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/JustPagAdc__c.field-meta.xml
<CustomField>
    <fullName>JustPagAdc__c</fullName>
    <label>Justificativa pagamento adicional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Complemento de pagamento devido a prorrogação de afastamento (DIT / RIT)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Complemento de pagamento devido a recidiva da doença (DIT / RIT)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Complemento de pagamento devido a valor da diária maior que o pago (DIT / RIT)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Complemento sobre a diferença de correção de indenização</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Correção de dados bancários incorretos de OP anterior</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Divergência do número de CPF de OP anterior</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Divergência do nome do favorecido de OP anterior</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Valor pago maior que a importância segurada devida</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Valor pago menor que a importância segurada devida</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Valor pago maior que as despesas apresentadas</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Valor pago menor que as despesas apresentadas</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Valor pago para favorecido incorreto</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Complemento de Pagamento</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Falha Operacional - Pagamento anterior incorreto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>