workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/MoedaGarantia__c.field-meta.xml
<CustomField>
    <fullName>MoedaGarantia__c</fullName>
    <formula>TEXT(Garantia_do_segurado_do_contrato__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda da Garantia</label>
    <type>Text</type>
</CustomField>