workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Motivo_da_Recusa__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Recusa__c</fullName>
    <label>Motivo da Recusa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>ABERTO INDEVIDAMENTE</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>ADMINISTRATIVAMENTE</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>A EXUMAÇÃO DOS CORPOS QUE ESTIVEREM NO JAZIGO QUANDO DO SEPULTAMENTO</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>AGRAVO DE RISCO</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>APARELHOS QUE SE REFEREM À ÓRTESES DE QUALQUER NATUREZA E A PRÓTESES DE CARÁTER PERMANENTE, SALVO AS PRÓTESES OU ÓRTESES IMPLANTADAS PELA PRIMEIRA VEZ DEVIDO AO EVENTO COBERTO</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>APÓLICE COM PARCELA PENDENTE</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>AQUISIÇÃO DE JAZIGO</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>AS DOENÇAS E OS ACIDENTES OCORRIDOS COM ALGUM DOS MEMBROS DA SUA FAMÍLIA, QUE NÃO OCASIONE INTERNAÇÃO</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>ATO ILÍCITO</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>CANCELAMENTO DE VIAGEM - COMPRA DE NOVA PASSAGEM</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>CANCELAMENTO DE VIAGEM PARA VIAGENS DE NAVIO, TREM , ÔNIBUS, MOTO, CARRO OU OUTRO MEIO DE DESLOCAMENTO</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>DATA DE OCORRÊNCIA ANTES DO INICIO DE VIGÊNCIA DA APÓLICE</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>DATA DE OCORRÊNCIA APÓS CANCELAMENTO DA APÓLICE</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>DATA DE OCORRÊNCIA APÓS O TERMINO VIGÊNCIA APÓLICE</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>DEMISSÃO POR JUSTA CAUSA</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>DIAGNOSTICO SEM NEXO CASUAL COM O ACIDENTE</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>DUPLICIDADE</label>
            </value>
            <value>
                <fullName>56</fullName>
                <label>EMBRIAGUEZ</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>ENCERRAMENTO POR FALTA DE DOCUMENTOS - VIAGEM</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>EPIDEMIAS E PANDEMIAS</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>EVENTO FORA DO PERÍODO DE VIGÊNCIA</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>EVENTO NÃO COMUNICADO A CIA AÉREA - VIAGEM</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>EVENTO NÃO SE ENQUADRA NO CONCEITO DE CANCELAMENTO DE VIAGEM</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>EVENTO NÃO SE ENQUADRA NO CONCEITO DE INTERRUPÇÃO DE VIAGEM</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>EVENTO NÃO SE ENQUADRA NO CONCEITO DE REMARCAÇÃO DE PASSAGEM</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>EVENTO OCORREU APOS CANCELAMENTO DA APÓLICE</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>EVENTO OCORRIDO ANTES DO INICIO DE VIGÊNCIA DA APÓLICE</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>EXTRAVIO DE BAGAGEM - MALA LOCALIZADA</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>FALTA DE JUSTIFICATIVA MEDICA PARA O AFASTAMENTO</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>FALTA DE VINCULO EMPREGATÍCIO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>