workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/msg_erro_log__c.field-meta.xml
<CustomField>
    <fullName>msg_erro_log__c</fullName>
    <label>msg erro log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>