workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Parecer_da_liquidacao__c.field-meta.xml
<CustomField>
    <fullName>Parecer_da_liquidacao__c</fullName>
    <label>Parecer da liquidação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>