workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/PercentualLiberados__c.field-meta.xml
<CustomField>
    <fullName>PercentualLiberados__c</fullName>
    <label>% Liberados</label>
    <summarizedField>BeneficiarioGarantia__c.Percentual_de_indenizacao__c</summarizedField>
    <summaryFilterItems>
        <field>BeneficiarioGarantia__c.Status__c</field>
        <operation>equals</operation>
        <value>Liberado</value>
    </summaryFilterItems>
    <summaryForeignKey>BeneficiarioGarantia__c.Pagamento_de_garantia__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>