workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Quantidade_de_Complementos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Complementos__c</fullName>
    <label>Quantidade de Complementos</label>
    <summaryForeignKey>ComplementoIndenizacao__c.PagamentoGarantia__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>