workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/QuantidadeDias__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDias__c</fullName>
    <label>Quantidade de Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>