workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Saldo_da_reserva__c.field-meta.xml
<CustomField>
    <fullName>Saldo_da_reserva__c</fullName>
    <label>Saldo da reserva - Garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>