workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Soma_Percentual__c.field-meta.xml
<CustomField>
    <fullName>Soma_Percentual__c</fullName>
    <label>Soma Percentual</label>
    <summarizedField>BeneficiarioGarantia__c.Percentual_de_indenizacao__c</summarizedField>
    <summaryFilterItems>
        <field>BeneficiarioGarantia__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryForeignKey>BeneficiarioGarantia__c.Pagamento_de_garantia__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>