workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/SomaValorBeneficiarios__c.field-meta.xml
<CustomField>
    <fullName>SomaValorBeneficiarios__c</fullName>
    <label>Soma Valor Beneficiários</label>
    <summarizedField>BeneficiarioGarantia__c.ValorIndenizacao__c</summarizedField>
    <summaryFilterItems>
        <field>BeneficiarioGarantia__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryForeignKey>BeneficiarioGarantia__c.Pagamento_de_garantia__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>