workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Status_do_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Status_do_pagamento__c</fullName>
    <label>Status do Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fase__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Com Pendências</fullName>
            </value>
            <value>
                <fullName>Aguardando Pagamento</fullName>
            </value>
            <value>
                <fullName>Pago Parcialmente</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
            <value>
                <fullName>Serviço Prestado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>