workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Valor_da_cotacao_em_reais__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_cotacao_em_reais__c</fullName>
    <label>Valor da cotação em R$</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>