workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/Valor_indenizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_indenizado__c</fullName>
    <label>Valor Provisionado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>