workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/ValorCotacao__c.field-meta.xml
<CustomField>
    <fullName>ValorCotacao__c</fullName>
    <formula>Garantia_do_segurado_do_contrato__r.ValorCotacao__c</formula>
    <label>Valor da Cotação</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>