workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/ValorIndenizado__c.field-meta.xml
<CustomField>
    <fullName>ValorIndenizado__c</fullName>
    <description>Campo inicialmente composto pela soma do capital e do complemento de indenização. Formula alterada para Valor_Indenizado__c + ComplementoIndenizacao__c por conta da história PLV-4070.</description>
    <formula>Valor_indenizado__c + ComplementoIndenizacao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Provisionado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>