workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/fields/ValorIndenizadoInicial__c.field-meta.xml
<CustomField>
    <fullName>ValorIndenizadoInicial__c</fullName>
    <description>Criado para a história PLV-4070. Será preenchido com o valor inserido no componente de criação de sinistros.</description>
    <label>Valor Avisado Inicial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>