workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/Limite_utrapassado.validationRule-meta.xml
<ValidationRule>
    <fullName>Limite_utrapassado</fullName>
    <active>true</active>
    <description>teste</description>
    <errorConditionFormula>IF(TEXT(Fase__c) = &quot;Em Análise&quot; 
			&amp;&amp; TEXT(Status_do_pagamento__c) = &quot;Em Análise&quot;
			&amp;&amp;  Garantia_do_segurado_do_contrato__r.GarantiaProduto__r.Controle_de_Uso_Saldo__c 
			&amp;&amp;	( 
							(Valor_indenizado__c &gt; Garantia_do_segurado_do_contrato__r.Saldo_de_utilizacao__c) 
							|| (( BLANKVALUE(Franquias__c, 0) + BLANKVALUE(QuantidadeDias__c, 0) ) &gt; Garantia_do_segurado_do_contrato__r.Saldo_de_utilizacao__c)
	), TRUE, FALSE
	)</errorConditionFormula>
    <errorMessage>Limite máximo de utilização da garantia ultrapassado</errorMessage>
</ValidationRule>