workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV001_PercentuarIndenizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>RV001_PercentuarIndenizacao</fullName>
    <active>false</active>
    <errorConditionFormula>Soma_Percentual__c  &gt; 100</errorConditionFormula>
    <errorMessage>Favor verificar os percentuais de indenização e os valores de indenização dos beneficiários da garantia, pois somados não podem ultrapassar o total do valor do Pagamento.</errorMessage>
</ValidationRule>