workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV002_ObrigarMotivoRecusa.validationRule-meta.xml
<ValidationRule>
    <fullName>RV002_ObrigarMotivoRecusa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Fase__c , &apos;Fechado&apos;),
ISPICKVAL(Status_do_pagamento__c ,&apos;Recusado&apos;),
ISPICKVAL(Motivo_da_Recusa__c ,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Motivo_da_Recusa__c</errorDisplayField>
    <errorMessage>Quando a fase for alterada para &quot;Fechado&quot; e o status for &quot;Recusado&quot;, o preenchimento do campo &quot;Motivo da Recusa&quot; deve ser obrigatório.</errorMessage>
</ValidationRule>