workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV004_FasePagamentoXFaseCaso.validationRule-meta.xml
<ValidationRule>
    <fullName>RV004_FasePagamentoXFaseCaso</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISCHANGED(Fase__c),
  OR(
    ISPICKVAL(Fase__c, &apos;Em Análise&apos;),
    ISPICKVAL(Fase__c, &apos;Fechado&apos;)
  ),
  ISPICKVAL(Caso__r.Status , &apos;Avisar&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Fase__c</errorDisplayField>
    <errorMessage>Você só pode alterar a fase do Pagamento para &apos;Em Análise&apos; ou &apos;Fechado&apos; se a fase do Caso for diferente de &apos;Avisar&apos;.</errorMessage>
</ValidationRule>