workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV005_AbertoAntesAnalise.validationRule-meta.xml
<ValidationRule>
    <fullName>RV005_AbertoAntesAnalise</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(Fase__c), 
ISPICKVAL(Fase__c , &quot;Em Análise&quot;), 
NOT(ISPICKVAL(PRIORVALUE(Fase__c ), &quot;Aberto&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Fase__c</errorDisplayField>
    <errorMessage>Para alterar a fase para Fechado, a fase anterior deve ser Em Análise</errorMessage>
</ValidationRule>