workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV006_AnaliseAntesDeFechar.validationRule-meta.xml
<ValidationRule>
    <fullName>RV006_AnaliseAntesDeFechar</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(Fase__c), 
ISPICKVAL(Fase__c , &quot;Fechado&quot;), 
NOT(ISPICKVAL(PRIORVALUE(Fase__c ), &quot;Em Análise&quot;)),
NOT(Caso__r.ODMProcessado__c)
)</errorConditionFormula>
    <errorDisplayField>Fase__c</errorDisplayField>
    <errorMessage>Para alterar a fase para Fechado, a fase anterior deve ser Em Análise</errorMessage>
</ValidationRule>