workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV007_NaoPodeVoltarAberto.validationRule-meta.xml
<ValidationRule>
    <fullName>RV007_NaoPodeVoltarAberto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(DATEVALUE(Caso__r.DataReabertura__c)=TODAY())
,AND( 
ISCHANGED(Fase__c), 
ISPICKVAL(Fase__c , &quot;Aberto&quot;),
OR( 
ISPICKVAL(PRIORVALUE(Fase__c ), &quot;Em Análise&quot;),
ISPICKVAL(PRIORVALUE(Fase__c ), &quot;Fechado&quot;)
)
))</errorConditionFormula>
    <errorDisplayField>Fase__c</errorDisplayField>
    <errorMessage>Você não pode voltar a fase para Aberto</errorMessage>
</ValidationRule>