workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/validationRules/RV008_SomaValorBeneficiario.validationRule-meta.xml
<ValidationRule>
    <fullName>RV008_SomaValorBeneficiario</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				ISNULL(QuantidadeDias__c), 
				OR(
								SomaValorBeneficiarios__c  &gt; ValorIndenizado__c
								)
)</errorConditionFormula>
    <errorMessage>Favor verificar os percentuais de indenização e os valores de indenização dos beneficiários da garantia, pois somados não podem ultrapassar o total do valor do Pagamento.</errorMessage>
</ValidationRule>