workspace-sf/force-app/main/default/objects/PagamentoGarantia__c/listViews/PAGO.listView-meta.xml
<ListView>
    <fullName>PAGO</fullName>
    <columns>NAME</columns>
    <columns>Caso__c</columns>
    <columns>Fase__c</columns>
    <columns>Status_do_pagamento__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_do_pagamento__c</field>
        <operation>equals</operation>
        <value>Pago</value>
    </filters>
    <label>PAGO</label>
</ListView>